--- a/test10.html
+++ b/test10.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice of Grid</title>
 
@@ -62,66 +64,35 @@
 
     <div class="main">
       <div class="text5">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-          explicabo totam eius corrupti asperiores. Laudantium cumque pariatur
-          necessitatibus repellendus laboriosam non facilis, sequi at cupiditate
-          distinctio, aut saepe quidem debitis voluptatibus sed quae hic,
-          repellat obcaecati maiores soluta exercitationem totam quo iusto
-          aliquid! Voluptas dolores voluptates nihil eius placeat! Ad maiores
-          nihil adipisci ipsum nobis nesciunt molestiae provident doloribus
-          consectetur atque vero enim distinctio nostrum omnis, quasi rerum sit
-          fugit magni sequi repellendus at voluptas saepe corrupti minima. Vero
-          asperiores aut perferendis, delectus cum quam autem harum et
-          exercitationem iusto modi numquam doloribus sapiente dicta quos
-          maxime, at excepturi quo soluta nostrum. Nemo velit, distinctio ex
-          placeat tempora voluptas, recusandae delectus quisquam quibusdam
-          minima eius, id temporibus architecto. Minima incidunt nostrum ad
-          laudantium aperiam numquam repellat dicta a voluptas dolores eligendi,
-          aut odit ullam facilis! Veritatis debitis itaque aliquid voluptas
-          dolorum praesentium magnam culpa perferendis. Iusto similique
-          veritatis itaque. Quae hic eius similique commodi magnam ratione eum
-          necessitatibus, sed fugiat officia molestias placeat qui corrupti
-          aperiam numquam tempore. Illo harum facere deserunt dignissimos dicta
-          autem praesentium. Iusto inventore atque alias. Laudantium,
-          repudiandae laboriosam odio dolorum dignissimos ipsum illo! Dicta
-          minima dolor maxime eius officiis necessitatibus, corporis sit atque,
-          itaque quasi recusandae ut praesentium, repellat rerum. Id nulla
-          temporibus, repellendus tenetur voluptate laudantium. Repellendus
-          illum in nihil, soluta laudantium quae quam magnam aut atque nemo
-          deserunt ducimus et animi excepturi praesentium sapiente distinctio,
-          voluptas deleniti cum! Cupiditate eligendi tempora perspiciatis
-          voluptates repellendus? Dolor pariatur quo ex. Expedita, vel eos
-          voluptatibus accusamus eaque voluptatum possimus neque numquam
-          molestiae consectetur provident ea dolor fugiat soluta quae tempore.
-          Itaque adipisci natus deserunt repellendus! Distinctio, ad! Hic
-          adipisci reprehenderit dicta nemo voluptatem odit nesciunt corporis
-          commodi explicabo impedit provident est rerum, incidunt ab nulla non
-          repellendus perspiciatis. Officiis unde architecto, expedita itaque
-          repellendus cumque fugiat eius maxime voluptatem aliquam dolores vel
-          dolorum earum ab impedit distinctio pariatur ratione quod veniam?
-          Incidunt ipsam suscipit aliquam magnam blanditiis laboriosam ut
-          necessitatibus commodi molestias inventore corporis magni illo maiores
-          adipisci placeat, hic iste explicabo, consectetur eum quam veritatis
-          recusandae? Ea molestias incidunt consequuntur, laborum minus quam non
-          quis dolores quidem dolor quo suscipit totam inventore ab illum enim
-          necessitatibus, saepe nobis, amet expedita ex. Dolorem, debitis iure
-          porro expedita harum accusamus omnis deserunt recusandae itaque
-          voluptatem laudantium autem eveniet? Autem repellat sint asperiores
-          harum debitis, voluptatum et eligendi repudiandae nesciunt quaerat ea
-          blanditiis officia vitae consequuntur tempore at eum quas libero! Eos
-          commodi odit eveniet quaerat placeat voluptas iusto doloremque
-          accusantium necessitatibus ex, saepe provident veritatis aspernatur
-          quam assumenda iure eius a explicabo quisquam ullam ut quo aliquam.
-          Ipsam totam officiis porro explicabo eaque ipsum fuga voluptas,
-          tenetur exercitationem doloribus architecto quod voluptatum provident
-          dolores omnis. Sequi dolore ad quas amet eveniet ratione ex
-          perferendis tempore natus molestiae fugit maiores hic corrupti sint
-          dolorem labore, quos quod nihil nam voluptas laboriosam sit!
-          Inventore, iste ab, quam a tempora sint corrupti vero blanditiis eos
-          facere, totam modi ducimus nemo voluptatum consequatur porro
-          dignissimos qui ipsa minus. Beatae, officiis.
-        </p>
+        <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">awais</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
       </div>
 
       <div class="main2">
